--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             height="400"
             fetchpriority="high"
           />
-          <h1 class="title">Let's hunt for your dream residence</h1>
+          <h1 class="title">Let's hunt for your dream residence!</h1>
           <p class="sub-headline">
             Explore our range of beautiful properties with the addition of
             separate accommodation suitable for you.
